--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Developer Skills & Editor Setup</title>
+    <title> Guess My Number Game </title>
     <!-- Css Link  -->
     <link rel="stylesheet" href="master.css">
     <!-- Google Fonts  -->
@@ -18,7 +18,7 @@
     <div class="parent">
       <div class="container">
         <button class="again"> Again!</button>
-        <p class="code">  < between 1 and 20> </p>
+        <p class="code">  < between 1 and 20 > </p>
       </div>
       <h1>Geuss My Number </h1>
       <p class="exlacmation"><span class="number">?</span></p>
